{
  "version": 4,
  "terraform_version": "0.13.3",
  "serial": 102,
  "lineage": "29578291-6c2c-e1ef-8099-6a14bae59cfa",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-0762bacff01ee92de",
            "domain": "vpc",
            "id": "eipalloc-06796c78d5a64b387",
            "instance": "i-0e5f61f7e68e74122",
            "network_interface": "eni-0f97f2fbd3cab9a2d",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-100-24-222-176.compute-1.amazonaws.com",
            "public_ip": "100.24.222.176",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_network_interface.web-server-nic",
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-server-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0817d428a6fb68645",
            "arn": "arn:aws:ec2:us-east-1:005339510358:instance/i-0e5f61f7e68e74122",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e5f61f7e68e74122",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "devops_training",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0f97f2fbd3cab9a2d"
              }
            ],
            "primary_network_interface_id": "eni-0f97f2fbd3cab9a2d",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_ip": "100.24.222.176",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0c82bd36a3a3bab95",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00f1b45a0b9d59211",
            "tags": {
              "Name": "Web-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0007bf24a498451af"
            ]
          },
          "dependencies": [
            "aws_network_interface.web-server-nic",
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:005339510358:internet-gateway/igw-0baf0b8b8d41c0e9d",
            "id": "igw-0baf0b8b8d41c0e9d",
            "owner_id": "005339510358",
            "vpc_id": "vpc-005f1ac656283491e"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "web-server-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-064a6a21b43c84106",
                "device_index": 0,
                "instance": "i-0e5f61f7e68e74122"
              }
            ],
            "id": "eni-0f97f2fbd3cab9a2d",
            "mac_address": "0e:ea:a2:15:5b:9f",
            "private_ip": "10.0.1.50",
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0007bf24a498451af"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00f1b45a0b9d59211"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-09ac3f700dc25ce3d",
            "owner_id": "005339510358",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0baf0b8b8d41c0e9d",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0baf0b8b8d41c0e9d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod"
            },
            "vpc_id": "vpc-005f1ac656283491e"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0601e15fe1d6d234f",
            "route_table_id": "rtb-09ac3f700dc25ce3d",
            "subnet_id": "subnet-00f1b45a0b9d59211"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.prod-route-table",
            "aws_subnet.subnet-1",
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:005339510358:security-group/sg-0007bf24a498451af",
            "description": "Allow web traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0007bf24a498451af",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": "",
            "owner_id": "005339510358",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-005f1ac656283491e"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:005339510358:subnet/subnet-00f1b45a0b9d59211",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-00f1b45a0b9d59211",
            "map_public_ip_on_launch": false,
            "owner_id": "005339510358",
            "tags": {
              "Name": "prod-subnet"
            },
            "vpc_id": "vpc-005f1ac656283491e"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:005339510358:subnet/subnet-0348162de9c19c764",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0348162de9c19c764",
            "map_public_ip_on_launch": false,
            "owner_id": "005339510358",
            "tags": {
              "Name": "dev-subnet"
            },
            "vpc_id": "vpc-005f1ac656283491e"
          },
          "dependencies": [
            "aws_vpc.prod-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prod-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:005339510358:vpc/vpc-005f1ac656283491e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0270b8f3278ec9471",
            "default_route_table_id": "rtb-098a034aa29736985",
            "default_security_group_id": "sg-02251433783933901",
            "dhcp_options_id": "dopt-dbb716a1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-005f1ac656283491e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-098a034aa29736985",
            "owner_id": "005339510358",
            "tags": {
              "Name": "production"
            }
          }
        }
      ]
    }
  ]
}